[package]
name = "pfs"
authors = ["KimLS"]
description = "A small utility for working with EverQuest archive files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
zu_common = { path = "../../crates/zu_common", version = "*" }
